[package]
name = "navier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colorgrad = "0.7.0"
image = "0.25.5"
indicatif = "0.17.9"
ndarray = "0.14.0"
nix = {version = "0.29.0", features = ["signal"]}
noise = "0.9.0"
num = "0.4.3"
ocl = "0.19"
ocl-vkfft = { path = "ocl-vkfft" }
rand = "0.8.5"

[dev-dependencies]
